# mcp-automatic-review

./: .env.example  .gitignore  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: mcp-testing.yml  security-scan.yml
MCP-list/: README.md
MCP-list/atlassian-mcp/: config.txt
MCP-list/example-mcp/: config.txt
MCP-list/playwright/: config.txt
docker/: Dockerfile.sandbox  docker-compose.yml  network-rules.sh
docs/: ARCHITECTURE.md  AUTOMATED_TESTING.md  GETTING_STARTED.md  WORKFLOW_DIAGRAM.md
examples/: README.md  USAGE_EXAMPLES.md  malicious_server.py  package.json
scripts/: validate_config.py
src/: __init__.py  cli.py
src/inspector/: __init__.py  static_scanner.py
src/installer/: __init__.py  github_source.py  local_source.py  mcp_source.py  npm_source.py  pypi_source.py  source_factory.py  url_source.py
src/interrogator/: __init__.py  llm_fuzzer.py
src/monitor/: behavior_monitor.py
src/orchestrator/: main.py
src/utils/: config.py  config_parser.py
tests/: test_config_parser.py  test_installer.py  test_llm_fuzzer.py  test_static_scanner.py
